Partial cleanup (I dare not remove too much here, but I'd like to remove/improve lots of the snippets) I removed the fileTypes array from Soryu's Java language grammar, so that it's always the stock one that gets chosen by default -- what is the status on the two grammars? I removed several of the “Find j-*” commands. It seems like cmd-E (copy selection to the find clipboard), shift-cmd-F (Find in Project), and return, would amount to almost the same.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@2256 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Find j-class declar.plist
+++ b/Commands/Find j-class declar.plist
@@ -9,7 +9,7 @@
 	<key>capturePattern</key>
 	<string>^.*\/(\w+\.java):(\d+):.*</string>
 	<key>command</key>
-	<string>egrep -rns "class[ ]+$TM_SELECTED_TEXT[ ]+" $TM_PROJECT_DIRECTORY | grep "\.java"</string>
+	<string>egrep -rns "class[ ]+${TM_SELECTED_TEXT:-$TM_CURRENT_WORD}[ ]+" "${TM_PROJECT_DIRECTORY:-$TM_DIRECTORY}" | grep "\.java"</string>
 	<key>fileCaptureRegister</key>
 	<string>1</string>
 	<key>input</key>
@@ -17,7 +17,7 @@
 	<key>lineCaptureRegister</key>
 	<string>2</string>
 	<key>name</key>
-	<string>Find j-class declar</string>
+	<string>Find Class Declaration for Word / Selection</string>
 	<key>output</key>
 	<string>separateWindow</string>
 	<key>scope</key>
