--- a/Commands/ShowJavaDoc.plist
+++ b/Commands/ShowJavaDoc.plist
@@ -15,7 +15,7 @@ fi</string>
 	<key>keyEquivalent</key>
 	<string></string>
 	<key>name</key>
-	<string>Javadoc Index</string>
+	<string>Show Java Documentation</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>scope</key>
