--- a/Commands/Find j-interf declar.plist
+++ b/Commands/Find j-interf declar.plist
@@ -9,7 +9,7 @@
 	<key>capturePattern</key>
 	<string>^.*\/(\w+\.java):(\d+):.*</string>
 	<key>command</key>
-	<string>egrep -rn "interface[ ]+$TM_SELECTED_TEXT" $TM_PROJECT_DIRECTORY | grep "\.java"</string>
+	<string>egrep -rn "interface[ ]+${TM_SELECTED_TEXT:-$TM_CURRENT_WORD}" "${TM_PROJECT_DIRECTORY:-$TM_DIRECTORY}" | grep "\.java"</string>
 	<key>fileCaptureRegister</key>
 	<string>1</string>
 	<key>input</key>
@@ -17,7 +17,7 @@
 	<key>lineCaptureRegister</key>
 	<string>2</string>
 	<key>name</key>
-	<string>Find j-interf declar</string>
+	<string>Find Interface Declaration for Word / Selection</string>
 	<key>output</key>
 	<string>separateWindow</string>
 	<key>scope</key>
