--- a/Commands/ant.plist
+++ b/Commands/ant.plist
@@ -10,8 +10,8 @@
 	<string>^(.*?):([0-9]+):.*</string>
 	<key>command</key>
 	<string>cd "$TM_DIRECTORY"
-
-ant -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_PATH/Commands/htmlize_ant.py" 
+export JAVA_HOME=${TM_JAVA_HOME:-/System/Library/Frameworks/JavaVM.framework/Home}
+ant -v -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_PATH/Commands/htmlize_ant.py" 
 
 </string>
 	<key>fileCaptureRegister</key>
@@ -19,7 +19,7 @@ ant -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_PATH/Commands/htmlize_ant.py"
 	<key>input</key>
 	<string>none</string>
 	<key>keyEquivalent</key>
-	<string></string>
+	<string>@b</string>
 	<key>lineCaptureRegister</key>
 	<string>2</string>
 	<key>name</key>
