--- a/info.plist
+++ b/info.plist
@@ -35,6 +35,7 @@
 		<string>2D3EF41B-6DFB-11D9-91EB-000D93589AF6</string>
 		<string>2D3EC03E-6DFB-11D9-91EB-000D93589AF6</string>
 		<string>FC40FDBA-EEB6-43FD-9D58-A1D0F116CEC1</string>
+		<string>923B569C-8B6A-49B6-AB91-3D35609F01E4</string>
 	</array>
 	<key>uuid</key>
 	<string>4677FEB2-6227-11D9-BFB1-000D93589AF6</string>
