--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -143,7 +143,7 @@
 			<key>begin</key>
 			<string>(?x)^\s*
 					((?:\b(public|private|protected|static|final|native|synchronized|abstract|threadsafe|transient)\b\s*)*) # modifier
-					((?!(if|while|catch))\w+)\s* # identifier
+					((?!(if|while|catch|switch))\w+)\s* # identifier
 					(?!.*;)  # abort if line has a ;
 					(?=\()</string>
 			<key>captures</key>
