--- a/Snippets/Java logger.plist
+++ b/Snippets/Java logger.plist
@@ -7,11 +7,11 @@
 protected final Log log = LogFactory.getLog(getClass());
 </string>
 	<key>name</key>
-	<string>logger</string>
+	<string>Logger</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jlog</string>
+	<string>log</string>
 	<key>uuid</key>
 	<string>BC8B9129-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
