--- a/Snippets/Java private method.plist
+++ b/Snippets/Java private method.plist
@@ -9,17 +9,15 @@
  * @param $4 $5
  * ${6:@return} $7
  */
-private ${1:void} $2(${3:String} $4) {
-
-   $0
-
+private ${1:void} ${2:method}(${3:String} $4) {
+	$0
 }</string>
 	<key>name</key>
-	<string>private method</string>
+	<string>Private Method (pm)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jpm</string>
+	<string>pm</string>
 	<key>uuid</key>
 	<string>BC8B91CE-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
