--- a/Snippets/System.out.println.plist
+++ b/Snippets/System.out.println.plist
@@ -3,10 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>System.out.println("${1:"foo = }");$0	
+	<string>System.out.println("${1:foo = }");
 </string>
 	<key>name</key>
-	<string>System.out.println</string>
+	<string>System.out.println (sout)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
