--- a/Templates/Ant build.xml/info.plist
+++ b/Templates/Ant build.xml/info.plist
@@ -8,7 +8,7 @@
 	<key>extension</key>
 	<string>xml</string>
 	<key>name</key>
-	<string>Ant build.xml</string>
+	<string>Ant Build</string>
 	<key>uuid</key>
 	<string>923B569C-8B6A-49B6-AB91-3D35609F01E4</string>
 </dict>
