--- a/Snippets/Java const def.plist
+++ b/Snippets/Java const def.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>private static final ${1:String} $2 = "$0";</string>
+	<string>private static final ${1:String} ${2:str} = ${4:"${3:value}"};</string>
 	<key>name</key>
-	<string>const def</string>
+	<string>Private Static Final (ps)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jps</string>
+	<string>ps</string>
 	<key>uuid</key>
 	<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
