--- a/Snippets/Java if statement.plist
+++ b/Snippets/Java if statement.plist
@@ -3,15 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>if ($1) { // $2
-   $0
+	<string>if (${1:condition}) {
+	${0:// expression}
 }</string>
 	<key>name</key>
-	<string>if statement</string>
+	<string>If Statement (if)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jif</string>
+	<string>if</string>
 	<key>uuid</key>
 	<string>BC8B8FE3-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
