--- a/Snippets/Java if:else statement.plist
+++ b/Snippets/Java if:else statement.plist
@@ -3,23 +3,18 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>if ($1) { // $2
-
-   $0
-
-} else { // $3
-
-   
+	<string>if (${1:condition}) {
+	${0:// expression}
+} else {
 
 }
-
 </string>
 	<key>name</key>
-	<string>if/else statement</string>
+	<string>If/Else Statement (ifelse)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jelse</string>
+	<string>ifelse</string>
 	<key>uuid</key>
 	<string>BC8B908F-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
