--- a/Snippets/Java private var.plist
+++ b/Snippets/Java private var.plist
@@ -3,15 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>private ${1:String} $2;
-
-$0</string>
+	<string>private ${1:String} ${2:str} = ${4:"${3:value}"};</string>
 	<key>name</key>
-	<string>private var</string>
+	<string>Private Variable (pv)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jpv</string>
+	<string>pv</string>
 	<key>uuid</key>
 	<string>BC8B9272-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
