--- a/Snippets/Java try:catch:finally.plist
+++ b/Snippets/Java try:catch:finally.plist
@@ -4,18 +4,18 @@
 <dict>
 	<key>content</key>
 	<string>try {
-   $2
-} catch ($1 e) {
-   $3
+	${2:// expression}
+} catch (${1:Exception} e) {
+	${3:// expression}
 } finally {
-   $0
+	${0:// expression}
 }</string>
 	<key>name</key>
-	<string>try/catch/finally</string>
+	<string>Try/Catch/Finally (tc)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jtc</string>
+	<string>tc</string>
 	<key>uuid</key>
 	<string>BC8B93B6-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
