--- a/Snippets/Java while statement.plist
+++ b/Snippets/Java while statement.plist
@@ -3,17 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>while ($1) { // $2
-
-   $0
-
+	<string>while (${1:condition}) {
+	${0:// expression}
 }</string>
 	<key>name</key>
-	<string>while statement</string>
+	<string>While Statement (while)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
-	<string>jwh</string>
+	<string>while</string>
 	<key>uuid</key>
 	<string>BC8B945A-5F16-11D9-B9C3-000D93589AF6</string>
 </dict>
