--- a/Snippets/Wrap Selection in Try:Catch.plist
+++ b/Snippets/Wrap Selection in Try:Catch.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
 <dict>
 	<key>content</key>
-	<string>try {
-	$TM_SELECTED_TEXT
-	} 
-catch ( Exception e) { 
-	e.printStackTrace();
-}</string>
+	<string>${TM_SELECTED_TEXT/\A(\s*).*/$1/m}try {
+${TM_SELECTED_TEXT/^.+$/\t$0/g}${TM_SELECTED_TEXT/\A(\s*).*/$1/m}}
+${TM_SELECTED_TEXT/\A(\s*).*/$1/m}catch ( Exception e) { 
+${TM_SELECTED_TEXT/\A(\s*).*/$1/m}	e.printStackTrace();
+${TM_SELECTED_TEXT/\A(\s*).*/$1/m}}
+</string>
 	<key>keyEquivalent</key>
 	<string>^W</string>
 	<key>name</key>
