--- a/Snippets/main.plist
+++ b/Snippets/main.plist
@@ -7,7 +7,7 @@
 	${1:System.exit(0)};
 }</string>
 	<key>name</key>
-	<string>main</string>
+	<string>Main Method (main)</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
