--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -8,9 +8,9 @@
 		<string>bsh</string>
 	</array>
 	<key>foldingStartMarker</key>
-	<string>\{\s*$</string>
+	<string>(\{\s*$|^\s*// \{\{\{)</string>
 	<key>foldingStopMarker</key>
-	<string>^\s*\}</string>
+	<string>^\s*(\}|// \}\}\}$)</string>
 	<key>name</key>
 	<string>Java</string>
 	<key>patterns</key>
@@ -143,7 +143,7 @@
 			<key>begin</key>
 			<string>(?x)^\s*
 					((?:\b(public|private|protected|static|final|native|synchronized|abstract|threadsafe|transient)\b\s*)*) # modifier
-					((?!(if|while|catch|switch))\w+)\s* # identifier
+					((?!(if|while|catch|this|print|return|synchronized|switch))\w+)\s* # identifier
 					(?!.*;)  # abort if line has a ;
 					(?=\()</string>
 			<key>captures</key>
@@ -177,6 +177,7 @@
 					((?:\b(public|private|protected|static|final|native|synchronized|abstract|threadsafe|transient)\b\s*)*) # modifier
 					(\b(void|boolean|byte|char|short|int|float|long|double|(\w+\.)*[A-Z]\w+)\b(\[\s*\])?)\s* # type
 					(\w+)\s* # identifier
+					(?!.*;)  # abort if line has a ;
 					(?=\()</string>
 			<key>captures</key>
 			<dict>
@@ -185,7 +186,7 @@
 					<key>name</key>
 					<string>storage.modifier.java</string>
 				</dict>
-				<key>3</key>
+				<key>4</key>
 				<dict>
 					<key>name</key>
 					<string>storage.type.java</string>
