• change Documentation key equivalent to ctrl-H (and name it just Documentation) • remove Soryu’s Java grammar (the main Java grammar should incorporate the stuff) • made input of the Word / Selection commands be “Selection or Word” to get the dynamic menu titles (even though the commands use environment variables instead of stdin)
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@2934 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Find j-interf declar.plist
+++ b/Commands/Find j-interf declar.plist
@@ -10,10 +10,12 @@
 	<string>^.*\/(\w+\.java):(\d+):.*</string>
 	<key>command</key>
 	<string>egrep -rn "interface[ ]+${TM_SELECTED_TEXT:-$TM_CURRENT_WORD}" "${TM_PROJECT_DIRECTORY:-$TM_DIRECTORY}" | grep "\.java"</string>
+	<key>fallbackInput</key>
+	<string>word</string>
 	<key>fileCaptureRegister</key>
 	<string>1</string>
 	<key>input</key>
-	<string>none</string>
+	<string>selection</string>
 	<key>lineCaptureRegister</key>
 	<string>2</string>
 	<key>name</key>
