--- a/Commands/ShowJavaDoc.plist
+++ b/Commands/ShowJavaDoc.plist
@@ -13,9 +13,9 @@ fi</string>
 	<key>input</key>
 	<string>none</string>
 	<key>keyEquivalent</key>
-	<string></string>
+	<string>^h</string>
 	<key>name</key>
-	<string>Show Java Documentation</string>
+	<string>Documentation</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>scope</key>
