• restructure to use the Support folder for template helpers (this will likely require a newer than release 989 build, due to TM_BUNDLE_SUPPORT)
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@3394 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Templates/Ant build.xml/info.plist
+++ b/Templates/Ant build.xml/info.plist
@@ -3,8 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>command</key>
-	<string>/bin/bash ../templatize.sh build-tplate.xml
-</string>
+	<string>templatize.sh build-tplate.xml</string>
 	<key>extension</key>
 	<string>xml</string>
 	<key>name</key>
