--- a/Templates/Hibernate Mapping Document/info.plist
+++ b/Templates/Hibernate Mapping Document/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>command</key>
-	<string>/bin/bash ../templatize.sh hibernate-tmpl.hbm.xml</string>
+	<string>templatize.sh hibernate-tmpl.hbm.xml</string>
 	<key>extension</key>
 	<string>hbm.xml</string>
 	<key>name</key>
