--- a/Templates/Java Class/info.plist
+++ b/Templates/Java Class/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>command</key>
-	<string>/bin/bash ../templatize.sh class-insert.java</string>
+	<string>templatize.sh class-insert.java</string>
 	<key>extension</key>
 	<string>java</string>
 	<key>name</key>
