--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,62 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>mainMenu</key>
+	<dict>
+		<key>items</key>
+		<array>
+			<string>DA0A5984-5F16-11D9-B9C3-000D93589AF6</string>
+			<string>05283F87-438D-45C1-ADFD-B8BF1CD17429</string>
+			<string>------------------------------------</string>
+			<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
+			<string>------------------------------------</string>
+			<string>DA0A565B-5F16-11D9-B9C3-000D93589AF6</string>
+			<string>DA0A5704-5F16-11D9-B9C3-000D93589AF6</string>
+			<string>------------------------------------</string>
+			<string>1E46CEB9-73B5-44DE-A9F9-A6DF2ED75950</string>
+			<string>03720953-CFC3-493A-BE33-CB48A34BECB5</string>
+			<string>A6150517-3C15-4664-BD02-26C6D975E470</string>
+			<string>BC8B8E05-5F16-11D9-B9C3-000D93589AF6</string>
+		</array>
+		<key>submenus</key>
+		<dict>
+			<key>03720953-CFC3-493A-BE33-CB48A34BECB5</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>CD5A1697-0D96-4F32-9AC7-BB549DEC9522</string>
+					<string>BC8B9506-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>------------------------------------</string>
+					<string>BC8B9129-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B9272-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B8F52-5F16-11D9-B9C3-000D93589AF6</string>
+				</array>
+				<key>name</key>
+				<string>Idioms</string>
+			</dict>
+			<key>1E46CEB9-73B5-44DE-A9F9-A6DF2ED75950</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>8092FC08-5291-4A9F-BAF3-DB352DDB6043</string>
+					<string>BC8B8EAC-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>------------------------------------</string>
+					<string>BC8B95CA-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B9318-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B91CE-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>------------------------------------</string>
+					<string>BC8B945A-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B8FE3-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B908F-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>BC8B93B6-5F16-11D9-B9C3-000D93589AF6</string>
+					<string>------------------------------------</string>
+					<string>E8F79EC3-C20D-4063-924B-1A43E1E18D11</string>
+				</array>
+				<key>name</key>
+				<string>Declarations</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>name</key>
 	<string>Java</string>
 	<key>ordering</key>
