--- a/Snippets/JSTL c:out.plist
+++ b/Snippets/JSTL c:out.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>&lt;c:out value="\${$1}"/&gt;$0</string>
 	<key>name</key>
-	<string>c:out</string>
+	<string>JSP: c:out</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
