--- a/Templates/Java Interface/info.plist
+++ b/Templates/Java Interface/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>command</key>
-	<string>/bin/bash ../templatize.sh iface-insert.java</string>
+	<string>templatize.sh iface-insert.java</string>
 	<key>extension</key>
 	<string>java</string>
 	<key>name</key>
