• remove mention of tab trigger from the name
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@3648 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/Class (class).plist
+++ b/Snippets/Class (class).plist
@@ -11,7 +11,7 @@
 }
 </string>
 	<key>name</key>
-	<string>Class (class)</string>
+	<string>Class</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
