--- a/Snippets/Java const def.plist
+++ b/Snippets/Java const def.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>private static final ${1:String} ${2:str} = ${4:"${3:value}"};</string>
 	<key>name</key>
-	<string>Private Static Final (ps)</string>
+	<string>Private Static Final</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
