--- a/Snippets/Java if statement.plist
+++ b/Snippets/Java if statement.plist
@@ -7,7 +7,7 @@
 	${0:// expression}
 }</string>
 	<key>name</key>
-	<string>If Statement (if)</string>
+	<string>If Statement</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
