--- a/Snippets/Java if:else statement.plist
+++ b/Snippets/Java if:else statement.plist
@@ -10,7 +10,7 @@
 }
 </string>
 	<key>name</key>
-	<string>If/Else Statement (ifelse)</string>
+	<string>If/Else Statement</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
