--- a/Snippets/Java private method.plist
+++ b/Snippets/Java private method.plist
@@ -13,7 +13,7 @@ private ${1:void} ${2:method}(${3:String} $4) {
 	$0
 }</string>
 	<key>name</key>
-	<string>Private Method (pm)</string>
+	<string>Private Method</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
