--- a/Snippets/Java private var.plist
+++ b/Snippets/Java private var.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>private ${1:String} ${2:str} = ${4:"${3:value}"};</string>
 	<key>name</key>
-	<string>Private Variable (pv)</string>
+	<string>Private Variable</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
