--- a/Snippets/Java public method.plist
+++ b/Snippets/Java public method.plist
@@ -15,7 +15,7 @@ public ${1:void} ${2:method}(${3:String} $4) {
 
 </string>
 	<key>name</key>
-	<string>Public Method (pum)</string>
+	<string>Public Method</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
