--- a/Snippets/Java try:catch:finally.plist
+++ b/Snippets/Java try:catch:finally.plist
@@ -11,7 +11,7 @@
 	${0:// expression}
 }</string>
 	<key>name</key>
-	<string>Try/Catch/Finally (tc)</string>
+	<string>Try/Catch/Finally</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
