--- a/Snippets/System.out.println.plist
+++ b/Snippets/System.out.println.plist
@@ -6,7 +6,7 @@
 	<string>System.out.println("${1:foo = }");
 </string>
 	<key>name</key>
-	<string>System.out.println (sout)</string>
+	<string>System.out.println</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
