--- a/Snippets/bean setter and getter.plist
+++ b/Snippets/bean setter and getter.plist
@@ -22,7 +22,7 @@ public ${2:String} get${1/./\u$0/}() {
 	<key>keyEquivalent</key>
 	<string></string>
 	<key>name</key>
-	<string>Set/Get (bean)</string>
+	<string>Set/Get</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
