--- a/Snippets/method.plist
+++ b/Snippets/method.plist
@@ -13,7 +13,7 @@ public ${1:void} ${2:method}() {
 	<key>keyEquivalent</key>
 	<string></string>
 	<key>name</key>
-	<string>Method (meth)</string>
+	<string>Method</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
