--- a/Snippets/Java JUnit test class def.plist
+++ b/Snippets/Java JUnit test class def.plist
@@ -28,7 +28,7 @@ public class ${2:`echo $TM_FILEPATH |  sed 's/\//./g' | sed 's/^.//' | sed 's/.*
    }
 }</string>
 	<key>name</key>
-	<string>JUnit Test Class (jtest)</string>
+	<string>JUnit Test Class</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
