--- a/Snippets/Java while statement.plist
+++ b/Snippets/Java while statement.plist
@@ -7,7 +7,7 @@
 	${0:// expression}
 }</string>
 	<key>name</key>
-	<string>While Statement (while)</string>
+	<string>While Statement</string>
 	<key>scope</key>
 	<string>source.java</string>
 	<key>tabTrigger</key>
