--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -224,7 +224,7 @@
 			<key>match</key>
 			<string>\b([A-Z][A-Z0-9_]+)\b</string>
 			<key>name</key>
-			<string>constant.java</string>
+			<string>constant.other.java</string>
 		</dict>
 		<dict>
 			<key>begin</key>
