• change keyword.embedded-docs.params to variable.parameter.documentation (since this seems to be documenting a parameter variable, but I might be wrong here) • give Java a key equivalent of ⌃⌥⇧J
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4282 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -11,6 +11,8 @@
 	<string>(\{\s*$|^\s*// \{\{\{)</string>
 	<key>foldingStopMarker</key>
 	<string>^\s*(\}|// \}\}\}$)</string>
+	<key>keyEquivalent</key>
+	<string>^~J</string>
 	<key>name</key>
 	<string>Java</string>
 	<key>patterns</key>
@@ -59,7 +61,7 @@
 						<key>1</key>
 						<dict>
 							<key>name</key>
-							<string>keyword.embedded-docs.params.java</string>
+							<string>variable.parameter.documentation.java</string>
 						</dict>
 					</dict>
 					<key>match</key>
