Added "source.js.prototype" to the scope of these; they were too broadly scoped.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4307 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -6,6 +6,8 @@
 	<array>
 		<string>properties</string>
 	</array>
+	<key>keyEquivalent</key>
+	<string>^~J</string>
 	<key>name</key>
 	<string>Java Properties</string>
 	<key>patterns</key>
