Change entity.name.constructor to entity.name.function.constructor
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4424 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -164,7 +164,7 @@
 				<key>3</key>
 				<dict>
 					<key>name</key>
-					<string>entity.name.constructor.java</string>
+					<string>entity.name.function.constructor.java</string>
 				</dict>
 			</dict>
 			<key>end</key>
@@ -306,7 +306,7 @@
 				<key>2</key>
 				<dict>
 					<key>name</key>
-					<string>entity.name.package.java</string>
+					<string>entity.name.function.package.java</string>
 				</dict>
 			</dict>
 			<key>match</key>
