Remove swallow use in favor of a constant.character.escape pattern.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4644 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -452,8 +452,15 @@
 			<string>"</string>
 			<key>name</key>
 			<string>string.quoted.double.java</string>
-			<key>swallow</key>
-			<string>\\.</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>match</key>
+					<string>\\.</string>
+					<key>name</key>
+					<string>constant.character.escape.java</string>
+				</dict>
+			</array>
 		</dict>
 		<key>support-type-built-ins-java</key>
 		<dict>
