(Part of the global rename of entity.name.class to entity.name.type)
Rename entity.name.class to entity.name.type.import and entity.name.type.class


git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4746 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -90,7 +90,7 @@
 				<key>4</key>
 				<dict>
 					<key>name</key>
-					<string>entity.name.class.java</string>
+					<string>entity.name.type.class.java</string>
 				</dict>
 			</dict>
 			<key>end</key>
@@ -287,7 +287,7 @@
 				<key>2</key>
 				<dict>
 					<key>name</key>
-					<string>entity.name.class.java</string>
+					<string>entity.name.type.import.java</string>
 				</dict>
 			</dict>
 			<key>match</key>
