--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -21,7 +21,7 @@
 			<key>match</key>
 			<string>/\*\*/</string>
 			<key>name</key>
-			<string>comment.block.java.empty</string>
+			<string>comment.block.empty.java</string>
 		</dict>
 		<dict>
 			<key>begin</key>
