• allow embedded documentation parameters and exceptions to start with uppercase characters — ticket 8649F92C
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4820 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -47,7 +47,7 @@
 						</dict>
 					</dict>
 					<key>match</key>
-					<string>\*\s*(@(param|throws))\s*([a-z]\w+)\s*</string>
+					<string>\*\s*(@(param|throws))\s*([a-zA-Z]\w+)\s*</string>
 				</dict>
 				<dict>
 					<key>match</key>
