• support @return «type» in comments — ticket 9A13E56A
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4831 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -50,6 +50,23 @@
 					<string>\*\s*(@(param|throws))\s*([a-zA-Z]\w+)\s*</string>
 				</dict>
 				<dict>
+					<key>captures</key>
+					<dict>
+						<key>1</key>
+						<dict>
+							<key>name</key>
+							<string>keyword.other.documentation.return.java</string>
+						</dict>
+						<key>3</key>
+						<dict>
+							<key>name</key>
+							<string>keyword.other.documentation.value.java</string>
+						</dict>
+					</dict>
+					<key>match</key>
+					<string>\*\s*(@(return))\s*([a-zA-Z]\w+)\s*</string>
+				</dict>
+				<dict>
 					<key>match</key>
 					<string>{@link\s+\S*\s+(\S*)}</string>
 					<key>name</key>
