• change javadoc markup to just match the 12 keywords defined here [1] plus {@link …}’s — in response to ticket 59F02688
[1] http://java.sun.com/j2se/javadoc/writingdoccomments/


git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@4889 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -33,56 +33,16 @@
 			<key>patterns</key>
 			<array>
 				<dict>
-					<key>captures</key>
-					<dict>
-						<key>1</key>
-						<dict>
-							<key>name</key>
-							<string>keyword.other.documentation.params.java</string>
-						</dict>
-						<key>3</key>
-						<dict>
-							<key>name</key>
-							<string>keyword.other.documentation.value.java</string>
-						</dict>
-					</dict>
 					<key>match</key>
-					<string>\*\s*(@(param|throws))\s*([a-zA-Z]\w+)\s*</string>
-				</dict>
-				<dict>
-					<key>captures</key>
-					<dict>
-						<key>1</key>
-						<dict>
-							<key>name</key>
-							<string>keyword.other.documentation.return.java</string>
-						</dict>
-						<key>3</key>
-						<dict>
-							<key>name</key>
-							<string>keyword.other.documentation.value.java</string>
-						</dict>
-					</dict>
-					<key>match</key>
-					<string>\*\s*(@(return))\s*([a-zA-Z]\w+)\s*</string>
-				</dict>
-				<dict>
-					<key>match</key>
-					<string>{@link\s+\S*\s+(\S*)}</string>
+					<string>@(param|return|throws|exception|author|version|see|since|serial|serialField|serialData|deprecated)\b</string>
 					<key>name</key>
-					<string>keyword.other.documentation.link.java</string>
+					<string>keyword.other.documentation.javadoc.java</string>
 				</dict>
 				<dict>
-					<key>captures</key>
-					<dict>
-						<key>1</key>
-						<dict>
-							<key>name</key>
-							<string>variable.parameter.documentation.java</string>
-						</dict>
-					</dict>
 					<key>match</key>
-					<string>\*\s*(@[a-zA-Z0-9_-]+)\s*</string>
+					<string>\{@link\s+[^\}]*\}</string>
+					<key>name</key>
+					<string>keyword.other.documentation.javadoc.link.java</string>
 				</dict>
 			</array>
 		</dict>
