--- a/Commands/ant.plist
+++ b/Commands/ant.plist
@@ -11,7 +11,7 @@
 	<key>command</key>
 	<string>cd "$TM_DIRECTORY"
 export JAVA_HOME=${TM_JAVA_HOME:-/System/Library/Frameworks/JavaVM.framework/Home}
-ant -v -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_SUPPORT/bin/htmlize_ant.py" 
+ant -s build.xml 2&gt;&amp;1 | "$TM_BUNDLE_SUPPORT/bin/htmlize_ant.py" 
 
 </string>
 	<key>fileCaptureRegister</key>
