--- a/info.plist
+++ b/info.plist
@@ -64,6 +64,7 @@
 	<array>
 		<string>DA0A5984-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>05283F87-438D-45C1-ADFD-B8BF1CD17429</string>
+		<string>A3AF777B-C1D8-4989-9251-7A0D594A407F</string>
 		<string>DA0A565B-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>DA0A5704-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
