--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -8,7 +8,7 @@
 		<string>bsh</string>
 	</array>
 	<key>foldingStartMarker</key>
-	<string>(\{\s*$|^\s*// \{\{\{)</string>
+	<string>(\{\s*(//.*)?$|^\s*// \{\{\{)</string>
 	<key>foldingStopMarker</key>
 	<string>^\s*(\}|// \}\}\}$)</string>
 	<key>keyEquivalent</key>
