Global change from comment.documentation to comment.block.documentation
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@5706 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -45,7 +45,7 @@
 			<key>end</key>
 			<string>\*/(\s*\n)?</string>
 			<key>name</key>
-			<string>comment.documentation.java</string>
+			<string>comment.block.documentation.java</string>
 			<key>patterns</key>
 			<array>
 				<dict>
