--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -22,7 +22,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>([#!])(.+)?$</string>
+			<string>([#!])(.+)?$\n?</string>
 			<key>name</key>
 			<string>comment.line.number-sign.java-props</string>
 		</dict>
